Bug 1075050 - GetCurrentDoc fixes in content/xul, r=wchen