content/xul/content/src/nsXULElement.cpp
@@ -500,7 +500,7 @@ nsXULElement::GetElementsByAttributeNS(const nsAString& aNamespaceURI,
 EventListenerManager*
 nsXULElement::GetEventListenerManagerForAttr(nsIAtom* aAttrName, bool* aDefer)
 {
-    // XXXbz sXBL/XBL2 issue: should we instead use GetCurrentDoc()
+    // XXXbz sXBL/XBL2 issue: should we instead use GetComposedDoc()
     // here, override BindToTree for those classes and munge event
     // listeners there?
     nsIDocument* doc = OwnerDoc();
@@ -637,8 +637,10 @@ nsXULElement::PerformAccesskey(bool aKeyCausesActivation,
         nsAutoString control;
         GetAttr(kNameSpaceID_None, nsGkAtoms::control, control);
         if (!control.IsEmpty()) {
+            //XXXsmaug Should we use ShadowRoot::GetElementById in case
+            //         content is in Shadow DOM?
             nsCOMPtr<nsIDOMDocument> domDocument =
-                do_QueryInterface(content->GetCurrentDoc());
+                do_QueryInterface(content->GetUncomposedDoc());
             if (domDocument)
                 domDocument->GetElementById(control, getter_AddRefs(element));
         }
@@ -1003,7 +1005,7 @@ nsXULElement::RemoveChildAt(uint32_t aIndex, bool aNotify)
     }
 
     nsIDocument* doc;
-    if (fireSelectionHandler && (doc = GetCurrentDoc())) {
+    if (fireSelectionHandler && (doc = GetComposedDoc())) {
       nsContentUtils::DispatchTrustedEvent(doc,
                                            static_cast<nsIContent*>(this),
                                            NS_LITERAL_STRING("select"),
@@ -1017,7 +1019,7 @@ nsXULElement::UnregisterAccessKey(const nsAString& aOldValue)
 {
     // If someone changes the accesskey, unregister the old one
     //
-    nsIDocument* doc = GetCurrentDoc();
+    nsIDocument* doc = GetComposedDoc();
     if (doc && !aOldValue.IsEmpty()) {
         nsIPresShell *shell = doc->GetShell();
 
@@ -1098,7 +1100,7 @@ nsXULElement::AfterSetAttr(int32_t aNamespaceID, nsIAtom* aName,
                 }
             }
     
-            nsIDocument *document = GetCurrentDoc();
+            nsIDocument* document = GetUncomposedDoc();
 
             // Hide chrome if needed
             if (mNodeInfo->Equals(nsGkAtoms::window)) {
@@ -1173,7 +1175,7 @@ nsXULElement::AfterSetAttr(int32_t aNamespaceID, nsIAtom* aName,
                 }
             }
     
-            nsIDocument* doc = GetCurrentDoc();
+            nsIDocument* doc = GetUncomposedDoc();
             if (doc && doc->GetRootElement() == this) {
                 if ((aName == nsGkAtoms::activetitlebarcolor ||
                      aName == nsGkAtoms::inactivetitlebarcolor)) {
@@ -1309,7 +1311,7 @@ nsXULElement::PreHandleEvent(EventChainPreVisitor& aVisitor)
             aVisitor.mAutomaticChromeDispatch = false;
 
             // XXX sXBL/XBL2 issue! Owner or current document?
-            nsCOMPtr<nsIDOMDocument> domDoc(do_QueryInterface(GetCurrentDoc()));
+            nsCOMPtr<nsIDOMDocument> domDoc(do_QueryInterface(GetUncomposedDoc()));
             NS_ENSURE_STATE(domDoc);
             nsCOMPtr<nsIDOMElement> commandElt;
             domDoc->GetElementById(command, getter_AddRefs(commandElt));
@@ -1413,7 +1415,7 @@ already_AddRefed<nsIXULTemplateBuilder>
 nsXULElement::GetBuilder()
 {
     // XXX sXBL/XBL2 issue! Owner or current document?
-    nsCOMPtr<nsIXULDocument> xuldoc = do_QueryInterface(GetCurrentDoc());
+    nsCOMPtr<nsIXULDocument> xuldoc = do_QueryInterface(GetUncomposedDoc());
     if (!xuldoc) {
         return nullptr;
     }
@@ -1703,7 +1705,7 @@ nsXULElement::Blur(ErrorResult& rv)
     if (!ShouldBlur(this))
       return;
 
-    nsIDocument* doc = GetCurrentDoc();
+    nsIDocument* doc = GetComposedDoc();
     if (!doc)
       return;
 
@@ -1732,7 +1734,7 @@ nsXULElement::ClickWithInputSource(uint16_t aInputSource)
     if (BoolAttrIsTrue(nsGkAtoms::disabled))
         return NS_OK;
 
-    nsCOMPtr<nsIDocument> doc = GetCurrentDoc(); // Strong just in case
+    nsCOMPtr<nsIDocument> doc = GetComposedDoc(); // Strong just in case
     if (doc) {
         nsCOMPtr<nsIPresShell> shell = doc->GetShell();
         if (shell) {
@@ -1774,7 +1776,7 @@ nsXULElement::ClickWithInputSource(uint16_t aInputSource)
 NS_IMETHODIMP
 nsXULElement::DoCommand()
 {
-    nsCOMPtr<nsIDocument> doc = GetCurrentDoc(); // strong just in case
+    nsCOMPtr<nsIDocument> doc = GetComposedDoc(); // strong just in case
     if (doc) {
         nsContentUtils::DispatchXULCommand(this, true);
     }
@@ -1886,7 +1888,7 @@ nsXULElement::MakeHeavyweight(nsXULPrototypeElement* aPrototype)
 nsresult
 nsXULElement::HideWindowChrome(bool aShouldHide)
 {
-    nsIDocument* doc = GetCurrentDoc();
+    nsIDocument* doc = GetUncomposedDoc();
     if (!doc || doc->GetRootElement() != this)
       return NS_ERROR_UNEXPECTED;
 
@@ -1918,7 +1920,7 @@ nsXULElement::HideWindowChrome(bool aShouldHide)
 nsIWidget*
 nsXULElement::GetWindowWidget()
 {
-    nsIDocument* doc = GetCurrentDoc();
+    nsIDocument* doc = GetComposedDoc();
 
     // only top level chrome documents can set the titlebar color
     if (doc && doc->IsRootDisplayDocument()) {
